# cities-old

./: .gitignore  Cargo.toml  Vagrantfile  bootstrap.sh  build.rs  cities.sublime-workspace
assets/models/: jarrett-test.model  jarrett-test.model.blendout.json  jarrett-test.model.config.json
assets/things/: jarrett-test.thing  jarrett-test.thing.json
blender/: __init__.py  bounding_box.py  camera.py  direction_exporter.py  operator.py  panel.py
doc/: model-file-format.md  model-rendering.md  picking.md  plugins.md  save-file-format.md  thing-file-format.md
glsl/: axis-indicator.vert.glsl  debug-lines.frag.glsl  debug-lines.vert.glsl  hud.vert.glsl  model.frag.glsl  model3d.vert.glsl  terrain.frag.glsl  terrain.vert.glsl  ui.frag.glsl  ui.vert.glsl  water.frag.glsl  water.vert.glsl
native/win64/: readme.txt
py/: build_model.py  build_thing.py  make_test_save_file.py  thing_configs.py
saves/: test.city
src/: assertions.rs  axis_indicator.rs  camera.rs  chunk.rs  errors.rs  futil.rs  gldebug.rs  glutil.rs  init.rs  macros.rs  main.rs  meta_model.rs  meta_thing.rs  terrain_program.rs  texture.rs  thing.rs  thing_configs.rs  vecmath.rs  water.rs  water_program.rs  world.rs
src/gldebug/: lines.rs  mod.rs
src/hud/: allocator.rs  element.rs  mod.rs  program.rs
src/math/: aabb.rs  line.rs  mod.rs  triangle.rs
src/meta_thing/: mod.rs
src/mode/: menu.rs  mod.rs
src/model/: buffers.rs  meta_model.rs  mod.rs  model.rs  program.rs  program3d.rs  sprite_pack.rs  sprite_sheet.rs  uvs_for_direction.rs
src/mouse/: mod.rs  target.rs  tree.rs
src/text/: mod.rs  (+1 more)
(+34 files in other folders)
