[package]

name = "cities"
version = "0.0.1"
authors = ["Jarrett Colby <jarrettcolby@gmail.com>"]

[dependencies.num]
num = "*"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.cgmath]
git = "https://github.com/jarrett/cgmath-rs.git"

[dependencies.image]
git = "file:///Users/jarrett/apps/image"

[dependencies]
libc = "*"

[dependencies]
byteorder = "*"