[package]

name = "cities"
version = "0.0.1"
authors = ["Jarrett Colby <jarrettcolby@gmail.com>"]

[dependencies]
gl = {git = "https://github.com/bjz/gl-rs"}
glfw = {git = "https://github.com/bjz/glfw-rs.git"}
cgmath = {git = "https://github.com/jarrett/cgmath-rs.git"}
freetype-rs = "*"
image = "*"
num = "*"
libc = "*"
byteorder = "*"