[package]
name = "cities"
version = "0.0.1"
authors = ["Jarrett Colby <jarrettcolby@gmail.com>"]

[dependencies]
gl = "*"
#cgmath = {git = "https://github.com/brendanzab/cgmath.git"}
#collision = {git = "https://github.com/kvark/collision-rs"}
#freetype-rs = "*"
#image = "*"
#num = "*"
libc = "*"
#byteorder = "*"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false